--- a/code.html
+++ b/code.html
@@ -37,7 +37,7 @@
         <div class="loader"></div>
     </div>
 
-    <div id="Home" class="slider wow">
+    <div id="#Home" class="slider wow">
         <div class="container">
             <div class="grad-2 aline-items-center d-grid">
                 <div class="text">
@@ -62,7 +62,7 @@
             </div>
         </div>
     </div>
-    <section id="Service us" class="p-tp7 Service wow">
+    <section id="#Service us" class="p-tp7 Service wow">
         <div class="container">
             <div class="head text-center">
                 <h2> We Provide Various Kind of Service for You </h2>
@@ -91,7 +91,7 @@
         </div>
 
     </section>
-    <section id="why us" class="p-tp7 whyus wow">
+    <section id="#why us" class="p-tp7 whyus wow">
         <div class="container">
             <div class="head text-center">
                 <h2> Why Us </h2>
@@ -160,7 +160,7 @@
             </div>
         </div>
     </section>
-    <section id="Our Protfolio" class="p-tp7 Protfolio wow">
+    <section id="#Our Protfolio" class="p-tp7 Protfolio wow">
         <div class="container">
 
             <head>
@@ -196,7 +196,7 @@
             </div>
         </div>
     </section>
-    <section id="Our Clients" class="p-tp7 Clients wow">
+    <section id="#Our Clients" class="p-tp7 Clients wow">
         <div class="container">
             <div class="d-flex aline-items-center">
                 <div class="head"></div>
@@ -231,7 +231,7 @@
         </div>
         </div>
     </section>
-    <footer id="footer">
+    <footer id="#footer">
         <div class=" container">
             <div class="contact-us w-80 m-auto">
                 <div class="d-flex">
